--- a/eng/pom.xml
+++ b/eng/pom.xml
@@ -11,7 +11,6 @@
     <artifactId>eng</artifactId>
     <packaging>jar</packaging>
     <name>eng</name>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -26,11 +25,31 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <version>5.0.0</version>
+            <classifier>jpa</classifier>
+        </dependency>
+
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
+        <!--   <dependency>
+               <groupId>org.slf4j</groupId>
+               <artifactId>slf4j-log4j12</artifactId>
+               <version>1.6.1</version>
+           </dependency>
+                  -->
+
     </dependencies>
 
-    <build>
-        <plugins>
-            <!-- Spring Boot plugins -->
+       <build>
+           <plugins>
+               <!-- Spring Boot plugins -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
