--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_sneakpic
+server.port = 5000
+
+spring.datasource.url= jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=springuser
-spring.datasource.password=password
+spring.datasource.username= ${RDS_USERNAME}
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-#spring.jpa.show-sql: true
